[fix] : 게이트웨이 properties파일 수정, spring.profile.active dev 추가 && 쓸모없음 QueryDsl plugin 제거

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,10 +4,10 @@ itbook.shop.server=http://localhost:8082
 itbook.delivery.server=http://localhost:8083
 itbook.batch.server=http://localhost:8084
 
-itbook.api.front=/front/**
-itbook.api.auth=/auth/**
-itbook.api.shop=/api/**
-itbook.api.delivery=/delivery/**
-itbook.api.batch=/batch/**
+itbook.front.api=/front/**
+itbook.auth.api=/auth/**
+itbook.shop.api=/api/**
+itbook.delivery.api=/delivery/**
+itbook.batch.api=/batch/**
 
 
