--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,9 @@ itbook.auth.server=http://133.186.152.177:8081
 itbook.shop.server=http://133.186.152.177:8082
 itbook.delivery.server=http://133.186.152.177:8083
 itbook.batch.server=http://133.186.152.177:8084
+
+itbook.front.api=/front/**
+itbook.auth.api=/auth/**
+itbook.shop.api=/api/**
+itbook.delivery.api=/delivery/**
+itbook.batch.api=/batch/**
