[chore] : 포트번호 8080 변경

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,10 @@
 itbook.front.server=http://133.186.210.242:8080
-itbook.auth.server=http://192.168.0.138:8081
-itbook.shop.server=http://192.168.0.157:8082
+itbook.auth.server=http://192.168.0.138:8080
+itbook.shop.server=http://192.168.0.36:8080
+# shop.server? shop1? shop2? ????? ??????
 
-
-itbook.delivery.server=http://133.186.152.177:8083
-itbook.batch.server=http://133.186.152.177:8084
+itbook.delivery.server=http://192.168.0.38:8080
+itbook.batch.server=http://192.168.0.81:8080
 
 itbook.front.api=/front/**
 itbook.auth.api=/auth/**
