--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,8 @@ itbook.shop.server=http://localhost:8082
 itbook.delivery.server=http://localhost:8083
 itbook.batch.server=http://localhost:8084
 
+itbook.shop-load.server=http://localhost:8082
+
 itbook.front.api=/front/**
 itbook.auth.api=/auth/**
 itbook.shop.api=/api/**
